[package]
name = "tic_tac_toe"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { workspace = true }
bevy = { workspace = true, features = ["wayland"] } 
avian3d = { workspace = true }
bevy-inspector-egui = { workspace = true}
leafwing-input-manager = { workspace = true }

sly_window_state.workspace = true
sly_editor.workspace = true
