[package]
name = "tic_tac_toe"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { workspace = true }
bevy = { workspace = true, features = [] } 
avian3d = { workspace = true }
bevy-inspector-egui = { workspace = true}
leafwing-input-manager = { workspace = true }

sly_common.workspace = true

