[package]
name = "tic_tac_toe"
version = "0.1.0"
edition = "2021"

[features]
default = []
editor = ["sly_common/editor"]
web = ["bevy/webgpu"]


[dependencies]
bevy = { workspace = true, features = [
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_window",
    "bevy_winit",
    "tonemapping_luts",
] }
bevy_rand = { workspace = true, features = ["wyrand"]}
rand = { workspace = true }

avian3d = { workspace = true }
bevy-inspector-egui = { workspace = true}
leafwing-input-manager = { workspace = true }

sly_common.workspace = true

