[package]
name = "unidir_events"
version = "0.1.0"
edition = "2021"

[features]
default = []
editor = ["sly_common/editor"]
web = ["bevy/webgpu"]


[dependencies]
bevy = { workspace = true, features = [
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_window",
    "bevy_winit",
    "tonemapping_luts",
] }
console_error_panic_hook.workspace = true
sly_common = { workspace = true }
leptos.workspace = true
leptos-bevy-canvas.workspace = true
leptos-use.workspace = true
meshtext = "0.3.1"
